--- a/app/src/main/res/layout/item_summer_contents.xml
+++ b/app/src/main/res/layout/item_summer_contents.xml
@@ -9,43 +9,44 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="3dp"
+        android:layout_marginBottom="11dp">
 
         <ImageView
             android:id="@+id/iv_home_summer_image"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
             android:src="@{context.getDrawable(contentsData.image)}"
-            android:layout_marginEnd="6dp"
+            app:shapeAppearanceOverlay="@style/Radius4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_home_summer_description"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
-            android:layout_marginEnd="6dp"
             android:text="@{contentsData.description}"
             android:includeFontPadding="false"
             android:textColor="@color/main_color"
             android:textAppearance="@style/TextAppearance.caption02"
+            app:layout_constraintEnd_toEndOf="@id/iv_home_summer_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_home_summer_image" />
 
         <TextView
             android:id="@+id/tv_home_summer_sub_description"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
-            android:layout_marginEnd="6dp"
-            android:layout_marginBottom="11dp"
             android:text="@{contentsData.subDescription}"
             android:includeFontPadding="false"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.caption02"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/iv_home_summer_image"
             app:layout_constraintStart_toEndOf="@id/tv_home_summer_description"
             app:layout_constraintTop_toBottomOf="@id/iv_home_summer_image" />
 
