--- a/app/src/main/res/layout/item_best.xml
+++ b/app/src/main/res/layout/item_best.xml
@@ -18,8 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@{context.getDrawable(BestProductModel.imageUrl)}"
-            android:layout_marginEnd="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
