--- a/app/src/main/res/layout/item_recommend_product.xml
+++ b/app/src/main/res/layout/item_recommend_product.xml
@@ -25,43 +25,45 @@
 
 
         <TextView
-            android:id="@+id/iv_home_recommend_brand"
+            android:id="@+id/tv_home_recommend_brand"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="@{BestProductModel.brand}"
             android:includeFontPadding="false"
-            android:layout_marginEnd="75dp"
             android:textColor="@color/dark_grey"
             android:textAppearance="@style/TextAppearance.miniCaption02"
-            app:layout_constraintEnd_toEndOf="parent"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_home_recommend_image" />
 
         <TextView
-            android:id="@+id/iv_home_recommend_title"
+            android:id="@+id/tv_home_recommend_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:includeFontPadding="false"
             android:text="@{BestProductModel.postTitle}"
+            tools:text="[10%쿠폰] 부드러운 카스\n테라 항균 옥수수솜 충전... "
             android:textAppearance="@style/TextAppearance.body02"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/iv_home_recommend_image"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_home_recommend_brand" />
+            app:layout_constraintTop_toBottomOf="@id/tv_home_recommend_brand" />
 
         <LinearLayout
+            android:id="@+id/layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="7dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_home_recommend_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_home_recommend_title"
             android:orientation="horizontal">
         <TextView
             android:id="@+id/iv_home_recommend_discount"
             android:layout_width="wrap_content"
-            android:layout_marginEnd="6dp"
             android:layout_height="wrap_content"
             android:text="@{BestProductModel.discount}"
+            tools:text="56%"
             android:includeFontPadding="false"
             android:textColor="@color/main_color"
             android:textAppearance="@style/TextAppearance.title01" />
@@ -70,9 +72,10 @@
             android:id="@+id/iv_home_recommend_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="42dp"
+            android:layout_marginStart="4dp"
             android:includeFontPadding="false"
             android:text="@{BestProductModel.price}"
+            tools:text="34,900"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.title01" />
         </LinearLayout>
