[feat] 폴더, 스크랩 어뎁터 구현

--- a/app/src/main/res/layout/item_folder.xml
+++ b/app/src/main/res/layout/item_folder.xml
@@ -22,6 +22,7 @@
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintTop_toTopOf="parent"
             app:spanCount="2"
+            tools:itemCount="4"
             tools:listitem="@layout/item_scrap" />
 
         <TextView
