[feat] 스크랩 뷰 api 연동

--- a/app/src/main/res/layout/activity_scrap.xml
+++ b/app/src/main/res/layout/activity_scrap.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.example.myhouse_aos.presentation.scrap.ScrapViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
