--- a/app/src/main/res/layout/item_hot_content.xml
+++ b/app/src/main/res/layout/item_hot_content.xml
@@ -18,9 +18,9 @@
 
         <ImageView
             android:id="@+id/iv_hot_content_image"
+            imageDrawable="@{content.image}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@{context.getDrawable(content.image)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/Radius4"
@@ -36,6 +36,7 @@
             android:includeFontPadding="false"
             android:lineHeight="24dp"
             android:paddingVertical="3dp"
+            android:text="@{content.postRate.toString()}"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="@+id/iv_hot_content_image"
             app:layout_constraintTop_toTopOf="parent"
