--- a/app/src/main/res/layout/item_color_interior.xml
+++ b/app/src/main/res/layout/item_color_interior.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="contentsData"
             type="com.example.myhouse_aos.domain.model.ContentsData" />
@@ -13,14 +14,24 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/iv_best_image"
+            android:id="@+id/iv_home_color_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@{context.getDrawable(contentsData.image)}"
             android:layout_marginEnd="8dp"
+            android:src="@{context.getDrawable(contentsData.image)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_home_color_bookmark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="9dp"
+            android:src="@drawable/ic_bookmark"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_home_color_image"
+            app:layout_constraintEnd_toEndOf="@+id/iv_home_color_image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
