--- a/app/src/main/res/layout/item_color_product.xml
+++ b/app/src/main/res/layout/item_color_product.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="BestProductModel"
             type="com.example.myhouse_aos.domain.model.BestProductModel" />
@@ -14,11 +15,11 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/iv_best_image"
+            android:id="@+id/iv_best_image_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@{context.getDrawable(BestProductModel.imageUrl)}"
             android:layout_marginEnd="6dp"
+            android:src="@{context.getDrawable(BestProductModel.imageUrl)}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,56 +30,57 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@{BestProductModel.brand}"
-            tools:text="헬로우슬립"
             android:includeFontPadding="false"
-            android:textColor="@color/dark_grey"
+            android:text="@{BestProductModel.brand}"
             android:textAppearance="@style/TextAppearance.miniCaption02"
+            android:textColor="@color/dark_grey"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_best_image" />
+            app:layout_constraintTop_toBottomOf="@id/iv_best_image_1"
+            tools:text="헬로우슬립" />
 
         <TextView
-            android:id="@+id/tv_best_title"
+            android:id="@+id/tv_best_title_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:includeFontPadding="false"
             android:text="@{BestProductModel.postTitle}"
             android:textAppearance="@style/TextAppearance.miniCaption02"
-            app:layout_constraintBottom_toTopOf="@id/layout"
+            app:layout_constraintBottom_toTopOf="@id/layout_1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_color_interior_brand"
             tools:text="LED 오로라 블루투스 스\n피커 무드등 인기상품임..." />
 
         <LinearLayout
-            android:id="@+id/layout"
+            android:id="@+id/layout_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="7dp"
+            android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_best_title"
-            android:orientation="horizontal">
+            app:layout_constraintTop_toBottomOf="@id/tv_best_title_1">
+
             <TextView
-                android:id="@+id/tv_best_discount"
+                android:id="@+id/tv_best_discount_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                tools:text="56%"
                 android:text="@{BestProductModel.discount}"
+                android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
-                android:textAppearance="@style/TextAppearance.caption01" />
+                tools:text="56%" />
 
             <TextView
-                android:id="@+id/tv_best_price"
+                android:id="@+id/tv_best_price_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
-                android:text="@{BestProductModel.price}"
-                tools:text="34,900"
                 android:includeFontPadding="false"
+                android:text="@{BestProductModel.price}"
+                android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
-                android:textAppearance="@style/TextAppearance.caption01" />
+                tools:text="34,900" />
         </LinearLayout>
 
 
