--- a/app/src/main/res/layout/item_recommend_home.xml
+++ b/app/src/main/res/layout/item_recommend_home.xml
@@ -25,6 +25,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/Radius4"
                 tools:src="@drawable/img_recommend_home" />
+
+            <ImageView
+                android:id="@+id/iv_home_recommend_bookmark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="11dp"
+                android:layout_marginBottom="13dp"
+                android:src="@drawable/ic_bookmark"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_home_recommend_image"
+                app:layout_constraintEnd_toEndOf="@+id/iv_home_recommend_image" />
+
             <TextView
                 android:id="@+id/iv_home_recommend_description"
                 android:layout_width="match_parent"
