[feat] 홈뷰 인기컨텐츠 서버 통신하여 기능 구현

--- a/app/src/main/res/layout/item_popular_contents.xml
+++ b/app/src/main/res/layout/item_popular_contents.xml
@@ -18,7 +18,7 @@
             android:id="@+id/iv_home_popular_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/img_popular_contents"
+            imageUrl="@{PopularContentsModel.image}"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,14 +29,12 @@
             android:layout_width="19dp"
             android:layout_height="19dp"
             android:background="@drawable/rectanglewithcorner"
-            android:text="@{PopularContentsModel.rate}"
+            android:text="@{PopularContentsModel.rate.toString()}"
             android:includeFontPadding="false"
             android:textSize="7sp"
             android:gravity="center"
             android:textColor="@color/white"
-            android:layout_marginEnd="125dp"
             android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="@id/iv_home_popular_image"
             app:layout_constraintStart_toStartOf="@id/iv_home_popular_image"
             app:layout_constraintTop_toTopOf="@id/iv_home_popular_image"
             android:textAppearance="@style/TextAppearance.caption01" />
