--- a/app/src/main/res/layout/item_popular_photo.xml
+++ b/app/src/main/res/layout/item_popular_photo.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:src="@{context.getDrawable(PopularContentsModel.imageUrl)}"
+            android:src="@drawable/img_popular_photo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
