--- a/app/src/main/res/layout/item_recommend_home.xml
+++ b/app/src/main/res/layout/item_recommend_home.xml
@@ -10,16 +10,16 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/iv_home_recommend_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:src="@{context.getDrawable(RecommendHomeModel.imageUrl)}"
+                imageUrl="@{RecommendHomeModel.imageUrl}"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:shapeAppearanceOverlay="@style/Radius4" />
             <TextView
                 android:id="@+id/iv_home_recommend_description"
