--- a/app/src/main/res/layout/item_recommend_product.xml
+++ b/app/src/main/res/layout/item_recommend_product.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             tools:src="@drawable/img_recommend_product"
-            android:src="@{context.getDrawable(BestProductModel.imageUrl)}"
+            android:src="@drawable/img_recommend_product"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -76,7 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.discount}"
+                android:text="@{BestProductModel.discount.toString()}"
                 android:textAppearance="@style/TextAppearance.title01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
@@ -87,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.price}"
+                android:text="@{BestProductModel.price.toString()}"
                 android:textAppearance="@style/TextAppearance.title01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
