[mod] 삭제된함수 추가

--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:scaleType="centerCrop"
-            imageUrl="@{BestProductModel.imageUrl}"
+            android:src="@drawable/img_best"
             app:layout_constraintEnd_toStartOf="@id/iv_best_image_2"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
             android:background="@drawable/rectanglewithcorner"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:text="@{BestProductModel.rank}"
+            android:text="1"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.caption01"
             android:textColor="@color/white"
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:includeFontPadding="false"
-            android:text="@string/string_best_product_description"
+            android:text="Q4 유로탑 롤팩 매트리..."
             android:textAppearance="@style/TextAppearance.miniCaption02"
             app:layout_constraintBottom_toTopOf="@id/layout_1"
             app:layout_constraintStart_toStartOf="@id/iv_best_image_1"
@@ -72,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.discount.toString()}"
+                android:text="56%"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
@@ -83,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.price.toString()}"
+                android:text="34,900"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
@@ -95,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:scaleType="centerCrop"
-            imageUrl="@{BestProductModel.imageUrl}"
+            android:src="@drawable/img_best"
             app:layout_constraintEnd_toStartOf="@id/iv_best_image_3"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/iv_best_image_1"
@@ -126,7 +126,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:includeFontPadding="false"
-            android:text="@string/string_best_product_description"
+            android:text="Q4 유로탑 롤팩 매트리..."
             android:textAppearance="@style/TextAppearance.miniCaption02"
             app:layout_constraintBottom_toTopOf="@id/layout_2"
             app:layout_constraintStart_toStartOf="@id/iv_best_image_2"
@@ -147,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.discount.toString()}"
+                android:text="56%"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
@@ -158,7 +158,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.price.toString()}"
+                android:text="34,900"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
@@ -169,7 +169,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            imageUrl="@{BestProductModel.imageUrl}"
+            android:src="@drawable/img_best"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/iv_best_image_2"
@@ -201,7 +201,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:includeFontPadding="false"
-            android:text="@string/string_best_product_description"
+            android:text="Q4 유로탑 롤팩 매트리..."
             android:textAppearance="@style/TextAppearance.miniCaption02"
             app:layout_constraintBottom_toTopOf="@id/layout_3"
             app:layout_constraintStart_toStartOf="@id/iv_best_image_3"
@@ -222,7 +222,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.discount.toString()}"
+                android:text="56%"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
@@ -233,7 +233,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.price.toString()}"
+                android:text="34,900"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
