[feat] 할인율, 가격(#,###)을 위한 binding Adapter 구현 및 적용

--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -17,11 +17,11 @@
 
         <ImageView
             android:id="@+id/iv_best_image_1"
+            imageUrl="@{BestProductModel.imageUrl}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:scaleType="centerCrop"
-            imageUrl="@{BestProductModel.imageUrl}"
             app:layout_constraintEnd_toStartOf="@id/iv_best_image_2"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
             android:background="@drawable/rectanglewithcorner"
             android:gravity="center"
             android:includeFontPadding="false"
-            android:text="@{BestProductModel.rank}"
+            android:text="@{BestProductModel.rank.toString()}"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.caption01"
             android:textColor="@color/white"
@@ -69,22 +69,22 @@
 
             <TextView
                 android:id="@+id/tv_best_discount_1"
+                discount="@{BestProductModel.discount}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.discount.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
 
             <TextView
                 android:id="@+id/tv_best_price_1"
+                priceAmount="@{BestProductModel.price}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.price.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
@@ -92,11 +92,11 @@
 
         <ImageView
             android:id="@+id/iv_best_image_2"
+            imageUrl="@{BestProductModel.imageUrl}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:scaleType="centerCrop"
-            imageUrl="@{BestProductModel.imageUrl}"
             app:layout_constraintEnd_toStartOf="@id/iv_best_image_3"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/iv_best_image_1"
@@ -148,18 +148,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.discount.toString()}"
+                discount="@{BestProductModel.discount}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
 
             <TextView
                 android:id="@+id/tv_best_price_2"
+                priceAmount="@{BestProductModel.price}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.price.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
@@ -167,10 +167,10 @@
 
         <ImageView
             android:id="@+id/iv_best_image_3"
+            imageUrl="@{BestProductModel.imageUrl}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            imageUrl="@{BestProductModel.imageUrl}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/iv_best_image_2"
@@ -223,18 +223,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="6dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.discount.toString()}"
+                discount="@{BestProductModel.discount}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/main_color"
                 tools:text="56%" />
 
             <TextView
                 android:id="@+id/tv_best_price_3"
+                priceAmount="@{BestProductModel.price}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="42dp"
                 android:includeFontPadding="false"
-                android:text="@{BestProductModel.price.toString()}"
                 android:textAppearance="@style/TextAppearance.caption01"
                 android:textColor="@color/black"
                 tools:text="34,900" />
